# tsoha-harjoitustyo

./: .gitignore  README.md  config.py  gunicorn_config.py  pyproject.toml  requirements.txt  tasks.py
app/: __init__.py  admin.py  app.py  auth.py  cart.py  db.py  init_db.sql  ostoskeskus.py  populate_db.sql
app/static/: ostoskeskus.css
app/templates/: base.html
app/templates/admin/: base.html  edit.html  products.html  sales.html  shop.html
app/templates/auth/: base.html  login.html  profile.html  register.html
app/templates/cart/: base.html  receipt.html  view.html
app/templates/ostoskeskus/: base.html  index.html  products.html  shops.html
documentation/: ajaminen_manuaalisesti.md  ajaminen_poetryn_avulla.md  testaaminen.md
