[tool.poetry]
name = "ostoskeskus"
version = "0.1.0"
description = ""
authors = ["Markus <markus.aurala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
autopep8 = "^2.3.1"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
